--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "exmple",
   "version": "0.1.0",
   "private": true,
-  "proxy":"http://localhost:8080/",
+  "proxy": "http://localhost:8080/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "antd": "^3.26.0",
+    "add": "^2.0.6",
+    "antd": "^3.26.3",
     "babel-plugin-import": "^1.13.0",
     "customize-cra": "^0.9.1",
     "react": "^16.12.0",
