--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.1.2",
     "add": "^2.0.6",
     "antd": "^3.26.3",
+    "axios": "^0.19.0",
     "babel-plugin-import": "^1.13.0",
     "customize-cra": "^0.9.1",
     "react": "^16.12.0",
